Updated CSS to be secure link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Create Your Own Beyonce</title>
 
   <!-- Source for css file: w3schools -->
-  <link href="http://www.w3schools.com/lib/w3.css" rel="stylesheet"/>
+  <link href="https://www.w3schools.com/lib/w3.css" rel="stylesheet"/>
 
   <!-- Jquery source -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -47,7 +47,7 @@
   <img class="mySlides" src="body3.gif" style="width:400px" >
 
   <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this, -1)">&#10094;</a>
-  <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this, 1)">&#10095;</a>
+  <a class="w3-btn-floating w3- sdisplay-right" onclick="plusDivs(this, 1)">&#10095;</a>
 </div>
 
 <!-- container to change legs -->
