updated image file names

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <!-- container to change head -->
 <div class="w3-content w3-display-container slider" id="head">
-  <img class="mySlides" src="head1.gif" style="width:400px">
-  <img class="mySlides" src="head2.gif" style="width:400px">
-  <img class="mySlides" src="head3.gif" style="width:400px">
+  <img class="mySlides" src="Head1.gif" style="width:400px">
+  <img class="mySlides" src="Head2.gif" style="width:400px">
+  <img class="mySlides" src="Head3.gif" style="width:400px">
 
 <!-- 'this' refers to exactly the html that is preceding it -->
   <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this,-1)">&#10094;</a>
@@ -42,9 +42,9 @@
 
 <!-- container to change body -->
 <div class="w3-content w3-display-container slider" id="body" >
-  <img class="mySlides" src="body1.gif" style="width:400px" >
-  <img class="mySlides" src="body2.gif" style="width:400px" >
-  <img class="mySlides" src="body3.gif" style="width:400px" >
+  <img class="mySlides" src="Body1.gif" style="width:400px" >
+  <img class="mySlides" src="Body2.gif" style="width:400px" >
+  <img class="mySlides" src="Body3.gif" style="width:400px" >
 
   <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this, -1)">&#10094;</a>
   <a class="w3-btn-floating w3- sdisplay-right" onclick="plusDivs(this, 1)">&#10095;</a>
@@ -52,9 +52,9 @@
 
 <!-- container to change legs -->
 <div class="w3-content w3-display-container slider" id="legs">
-  <img class="mySlides" src="foot1.gif" style="width:400px">
-  <img class="mySlides" src="foot2.gif" style="width:400px">
-  <img class="mySlides" src="foot3.gif" style="width:400px">
+  <img class="mySlides" src="Foot1.gif" style="width:400px">
+  <img class="mySlides" src="Foot2.gif" style="width:400px">
+  <img class="mySlides" src="Foot3.gif" style="width:400px">
 
   <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this, -1)">&#10094;</a>
   <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this, 1)">&#10095;</a>
