fixed button css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <img class="mySlides" src="Body3.gif" style="width:400px" >
 
   <a class="w3-btn-floating w3-display-left" onclick="plusDivs(this, -1)">&#10094;</a>
-  <a class="w3-btn-floating w3-sdisplay-right" onclick="plusDivs(this, 1)">&#10095;</a>
+  <a class="w3-btn-floating w3-display-right" onclick="plusDivs(this, 1)">&#10095;</a>
 </div>
 
 <!-- container to change legs -->
